# labs

./: .gitignore  .gitmodules  README.md
algo/: BUILD  README.md  bazel-algo  bazel-bin  bazel-genfiles  bazel-out  bazel-testlogs  benchmark.h  concat.py  io.h  random.cc
archeom/lab_1/: Benchmark.cpp  Benchmark.h  CMakeLists.txt  main.cpp
archeom/lab_1/example/: Звіт з АОС (Л. р.№1).docx
archeom/lab_1/example/AOS/: CMakeLists.txt
archeom/lab_1/example/AOS/Lab_1/: lab_1.cpp
archeom/lab_1/example/AOS_L2_J/AOS_L2_J/: AOS.txt  AOS_L2_J.vcxproj  ReadMe.txt  stdafx.cpp
archeom/lab_1/example/AOS_L2_J/AOS_L2_J/Debug/: AOS_L2_J.pch  CL.write.1.tlog  link.read.1.tlog  mt.command.1.tlog  mt.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  vc100.idb
archeom/lab_1/example/AOS_L2_J/Debug/: AOS_L2_J.ilk
archeom/lab_1/example/AOS_L2_J/ipch/aos_l2_j-9aa9c8e9/: aos_l2_j-9dc6e5b5.ipch
archeom/lab_1/io/: Postprocessor.cpp  TablePrinter.cpp
archeom/lab_1/logs/: cpp.txt~
archeom/lab_1/ops/: Asm.cpp  Cpp.h
archeom/lab_1/utils/: Timer.cpp  Timer.h
cg/: index.html  orbit.js  script.js  tree.js
db/: .gitmodules  README.md  about.php  config.php  db.php  index.php  modify.php  run.php  show.php
decision_theory/: lab1.ipynb  lab2.ipynb
potienko/block_2_1/lab_2/: CMakeLists.txt  Contour.cpp  Contour.h  ContourFabric.h  Point.cpp  Point.h  Segment.cpp  Segment.h  debug.cpp  exceptions.h  iolib.cpp  iolib.h  main.cpp  share.h
potienko/block_2_1/lab_3/: CMakeLists.txt  Contour.cpp  Contour.h  ContourFabric.h  Point.h  Segment.cpp  Segment.h  debug.h  exceptions.h  iolib.cpp  iolib.h  main.cpp  share.h
potienko/block_2_3/lab_1/: BigFloat.cpp  BigFloat.h  BigInteger.cpp  BigInteger.h  CMakeLists.txt  calculator.cpp  calculator.h  exceptions.h  lexeme.h  lexer.cpp  lexer.h  main.cpp  out.txt  parser.h  testlib.cpp  testlib.h  token.cpp  token.h
(+798 files in other folders)
